<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.viewAddNewTaskActivity.NewTaskActivity">
    <include layout="@layout/add_new_task_toolbar">
    </include>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#fff"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4.5"
                android:background="@color/colorPrimary"
                android:gravity="bottom"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/edit_text_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_new_task_title_margin_horizontal"
                    android:layout_marginRight="@dimen/activity_new_task_title_margin_horizontal"
                    android:layout_weight="1.25"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/task_title"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_marginBottom="16dp"
                        android:lines="2"
                        android:id="@+id/edt_new_task_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#fff"
                        android:hint="Enter Tast Here"
                        android:textColor="#fff"
                        android:textColorHint="#fff"
                        android:textSize="19sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_new_task_content_margin"
                android:layout_weight="5.5"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/task_date"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edt_new_task_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:layout_weight="4"
                            android:focusable="false"
                            android:backgroundTint="@color/colorAccent"
                            android:textColorHint="#95a5a6"
                            android:hint="@string/date_not_set" />

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_calendar" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/task_time"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edt_new_task_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:backgroundTint="@color/colorAccent"
                            android:layout_weight="4"
                            android:focusable="false"
                            android:textColorHint="#95a5a6"
                            android:hint="@string/time_not_set" />

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_time" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.hosiluan.reminder.view.viewAddNewTaskActivity.MySpinner
                        android:id="@+id/spinner_repeat"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/colorAccent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start">

                    </com.hosiluan.reminder.view.viewAddNewTaskActivity.MySpinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_list"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spinner_add_to_list"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/colorAccent"
                        android:layout_height="wrap_content">
                    </android.support.v7.widget.AppCompatSpinner>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_send"
            app:fabSize="normal"
            app:layout_anchor="@id/edit_text_linear_layout"
            app:layout_anchorGravity="bottom|right"

            />
    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>
